--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,10 @@
 # Change Log
 All notable changes to this project will be documented in this file.
 
+## [1.0.0] - 2020-07-18
+
+Bump to 1.0.0 to align with npm's [suggested versioning](https://docs.npmjs.com/about-semantic-versioning).
+
 ## [0.0.14] - 2020-07-15
 
 ### Fixed
